--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,18 +12,20 @@ h1 {
     font-family: 'Faster One', cursive;
     font-size: 100px;
     color: turquoise;
+    overflow: hidden;
     text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
-
-.image {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
+h2 {
+    text-align: center;
+    font-family: 'PT Sans', sans-serif;
+    font-size: 30px;
+    color: turquoise;
 }
+
 
 #container{
     text-align: center;
+    
 }
 
 .btn {
@@ -35,6 +37,7 @@ h1 {
     border-radius: 7px;
     color: #fefefe;
     font-size: 1.5rem;
+    overflow: hidden;
     text-transform: capitalize;
     transition: background 250ms ease-in-out, 
                 transform 150ms ease;
@@ -51,7 +54,86 @@ h1 {
     Color:#fafafa;
 }
 
+#map {
+    min-height: 700px;
+    margin: 2%;
+    border: white solid 5px;
+    border-radius: 20px;
+    overflow: hidden;
+    text-align: center;
+}
 
 
-    
+#location-text-box {
+    background-color: #d9edf7;
+    color: #000000;
+    border: 3px white solid;
+    border-radius: 25px;
+    font-family: Roboto;
+    font-size: 15px;
+    font-weight: 300;
+    margin-left: 12px;
+    padding: 0 11px 0 13px;
+    text-overflow: ellipsis;
+    width: 25%;
+}
+#location-text-box:focus {
+    border-color: red;
+}
 
+table {
+        font-size: 12px;
+      }
+#listing {
+        position: absolute;
+        width: 200px;
+        height: 470px;
+        overflow: auto;
+        left: 442px;
+        top: 0px;
+        cursor: pointer;
+        overflow-x: hidden;
+}
+#findsites {
+        position: absolute;
+        text-align: right;
+        width: 100px;
+        font-size: 14px;
+        padding: 4px;
+        z-index: 5;
+        background-color: #fff;
+      }
+
+#autocomplete {
+        width: 100%;
+}
+#country {
+        width: 100%;
+}
+.placeIcon {
+        width: 20px;
+        height: 34px;
+        margin: 4px;
+}
+.hotelIcon {
+        width: 24px;
+        height: 24px;
+}
+#resultsTable {
+        border-collapse: collapse;
+        width: 240px;
+}
+#rating {
+        font-size: 13px;
+        font-family: Arial Unicode MS;
+}
+.iw_table_row {
+        height: 18px;
+}
+.iw_attribute_name {
+        font-weight: bold;
+        text-align: right;
+}
+.iw_table_icon {
+        text-align: right;
+}
